// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente GifGrid Debe de mostrar el GifGrid correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hitman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas del componente GifGrid Debe de mostrar items cuando se cargan imágenes useFetchGif 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hitman
  </h3>
  <div
    className="card-grid"
  >
    <GifGrifItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
